--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,34 @@
 body {
-    /* scrollbar-width: thin; */
+    background-color: #111222;
+
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
-
+    
     font-family: Verdana;
-}
-
-.background {
-    max-width: 100%;
-    object-fit: none;
-    /* position: fixed; */
 }
 
 header {
     display: grid;
     grid-template-columns: 1fr 6fr 1fr;
-    background-color: aqua;
-    /* font-size: 50px; */
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 0px;
     width: 100%;
-    /* overflow: hidden; */
 }
 .background-header {
     display: grid;
     grid-template-columns: 1fr 6fr 1fr;
-    /* background-color: aqua; */
-
     background-image: url("img/cube-back.png");
-
     max-width: 100%;
-
-    /* font-size: 50px; */
-        /* margin-top: 0px;
-        margin-bottom: 0px;
-        margin-left: 0px;
-        width: 100%; */
-    /* overflow: hidden; */
 }
 
 .header-text {
-    font-size: min(10vh);
-    margin-bottom: 0;
-    margin-top: 0;
-    /* margin-top: 2vh; */
-    /* margin-bottom: 2vh; */
-    /* padding: 2vh; */
-    /* border-radius: 20px; */
-    /* text-align: center; */
-    /* background-color: red; */
-    /* min-width: 500px; */
+    font-size: 10vh;
+    margin: 0;
+    color: #9499e1;
+    font-weight: normal;
 }
 
 .logo {
@@ -65,7 +41,7 @@ header {
     /* padding: 2vh; */
     border-radius: 20px;
     /* text-align: center; */
-    background-color: red;
+    background-color: #1e1f2f;
     min-width: 500px;
 }
 .logo-center {
@@ -77,29 +53,27 @@ header {
 
 .icon {
     display: grid;
-    background-color: gray;
-    border-radius: 1vh;
+    background-color: #111222;
+    border-radius: 0.5vh;
     padding: 1vh;
     height: 100%;
-    /* width: ; */
-    /* margin-top: 20px; */
     grid-template-rows: 3vh 3vh 3vh;
     grid-template-columns: 3vh 3vh 3vh;
-    row-gap: 0.5vh;
-    column-gap: 0.5vh;
+    row-gap: 0.7vh;
+    column-gap: 0.7vh;
 }
 .icon:hover {
     cursor: pointer;
 }
 
 .cube-element {
-    background-color: blue;
     border-radius: 0.5vh;
 }
 
 nav {
-    background-color: green;
+    background-color: #111222;
     margin: 0;
+    /* padding-left: calc(100vw - 100%); */
     /* min-height: 500px; */
     width: 100%;
 }
@@ -107,12 +81,7 @@ nav {
 footer {
     margin-bottom: 0px;
     margin-top: 0px;
-    /* position: fixed; */
-    /* bottom: 0px; */
-    /* height: min(25px, 6vh); */
-    /* height: 10px; */
-    /* padding: min(15px, 2vh); */
-    background-color: gray;
+    background-color: #1e1f2f;
     text-align: center;
     width: 100%;
     min-width: 500px;
@@ -121,9 +90,7 @@ footer {
 }
 
 .footer-text {
-    color: rgb(32, 32, 32);
-    /* font-size: min(16px, 2vh); */
-    /* text-align: center; */
+    color: #3f4164;
     padding-top: min(10px, 1vh);
     padding-bottom: min(10px, 1vh);
     padding-left: 0;
@@ -150,14 +117,13 @@ h1 {margin-top: 0px;}
 .tut-menu {
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
     /* justify-content: center; */
     align-items: center;
     margin-bottom: 10%;
 }
 
 .option {
-    /* justify-content: center; */
-    /* align-items: center; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -169,7 +135,7 @@ h1 {margin-top: 0px;}
     margin-bottom: 50px;
     margin-left: 25px;
     margin-right: 25px;
-    background-color: white;
+    background-color: #515482;
     border-style: solid;
     transition: 0.5s;
 }
@@ -184,25 +150,38 @@ h1 {margin-top: 0px;}
     filter: saturate(100%)
 }
 .option:hover .option-img-container {
-    height: 80%;
-    width: 80%;
+    height: 95%;
+    width: 87%;
 }
 .option:active {
-    background-color: orange;
+    background-color: #a2a6d6;
     transition: 0.15s
 }
 .option-text {
-    margin-top: 5%;
-    margin-bottom: 6vh;
+    margin-top: 3%;
+    /* margin-bottom: 6vh; */
     font-size: min(35px, 2vw);
-    color: red;
+    color: #9499e1;
+
+    text-shadow:
+    -2px -2px 0 #111222,
+     0   -2px 0 #111222,
+     2px -2px 0 #111222,
+     2px  0   0 #111222,
+     2px  2px 0 #111222,
+     0    2px 0 #111222,
+    -2px  2px 0 #111222,
+    -2px  0   0 #111222;
+
+    /* -webkit-text-stroke: 2px #111222; */
+    font-weight: bold;
     text-align: center;
 }
 .option-img-container {
     /* background-color: blue; */
     margin-top: 0;
-    height: 80%;
-    width: 70%;
+    height: 90%;
+    width: 85%;
     object-fit: cover;
     transition: 0.5s;
 }
@@ -215,6 +194,10 @@ h1 {margin-top: 0px;}
 }
 
 .tut-option {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
     margin-top: min(50px, 6vh);
     height: min(300px, 30vh);
     min-height: 200px;
@@ -224,37 +207,217 @@ h1 {margin-top: 0px;}
     margin-bottom: min(30px, 6vh);
     margin-left: 25px;
     margin-right: 25px;
-    background-color: white;
+    background-color: #515482;
+    border-style: solid;
+    transition: 0.5s;
+}
+.tut-option-build {
+    opacity: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    margin-top: min(50px, 6vh);
+    height: min(300px, 30vh);
+    min-height: 200px;
+    width: min(1000px, 40vw);
+    min-width: 500px;
+    border-radius: min(40px, 8vh);
+    margin-bottom: min(30px, 6vh);
+    margin-left: 25px;
+    margin-right: 25px;
+    background-color: #515482;
     border-style: solid;
     transition: 0.5s;
 }
 .tut-option:hover {
-    background-color: blueviolet;
     width: min(1200px, 48vw);
     cursor: pointer;
 }
+.tut-option:hover .tut-description {
+    /* color: rgba(173, 166, 126, 0.644); */
+    color: #4e5392;
+}
 .tut-option:active {
-    background-color: orange;
+    background-color: #a2a6d6;
     transition: 0.15s
 }
 .tut-home {
     margin-top: min(150px, 6vh);
-    height: min(100px, 30vh);
+    height: min(200px, 10vh);
     width: min(500px, 35vw);
     border-radius: min(40px, 8vh);
     margin-bottom: min(50px, 8vh);
     margin-left: 25px;
     margin-right: 25px;
-    background-color: white;
+    background-color: #515482;
     border-style: solid;
     transition: 0.5s;
 }
 .tut-home:hover {
-    background-color: blueviolet;
     width: min(600px, 42vw);
     cursor: pointer;
 }
-.tut-option:active {
-    background-color: orange;
-    transition: 0.15s
+.tut-home:active {
+    background-color: #a2a6d6;
+    transition: 0.15s;
+}
+
+.tut-img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
+    aspect-ratio: 1 / 1;
+    background-color: #111222;
+    border-radius: 40px;
+    border: solid;
+    border-color: #9499e1;
+    transition: 0.5s;
+}
+.tut-img {
+    max-width: 100%;
+    opacity: 80%;
+}
+
+.tut-description {
+    margin-top: 5%;
+    margin-bottom: 2vh;
+    font-size: min(100px, 5vw);
+
+    color: #9499e1;
+    text-align: center;
+    transition: 0.5s;
+
+    text-shadow:
+    -2px -2px 0 #111222,
+     0   -2px 0 #111222,
+     2px -2px 0 #111222,
+     2px  0   0 #111222,
+     2px  2px 0 #111222,
+     0    2px 0 #111222,
+    -2px  2px 0 #111222,
+    -2px  0   0 #111222;
+
+    font-weight: bold;
+    text-align: center;
+}
+.tut-count {
+    text-align: center;
+    /* font-size: 50%; */
+}
+
+/* ---------------------------------------------------------------------------- */
+
+.video {
+    width: 500px;
+    aspect-ratio: 16 / 9;
+    margin-bottom: 50px;
+}
+
+.content-box {
+    display: grid;
+    grid-template-columns: 1fr 6fr 1fr;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 200px;
+}
+
+.content-element {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+    /* height: 400px; */
+    height: auto;
+    border-radius: 20px;
+    background-color: #515482;
+    text-align: center;
+    align-items: center;
+}
+.content-header {
+    font-size: 50px;
+    /* width: 400px; */
+    width: auto;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 20px;
+    /* color: white; */
+    border-radius: 20px;
+    /* padding: 10px; */
+    background-color: #1e1f2f;
+
+    color:#9499e1;
+    font-weight: normal;
+
+}
+.content-text {
+    color: white;
+    font-size: 25px;
+    margin: 20px;
+    margin-bottom: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-weight: normal;
+
+    background-color: #1e1f2f;
+    border-radius: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+.disc-text {
+    color: white;
+    font-size: 25px;
+    margin: 50px;
+    /* margin-bottom: 50px; */
+    margin-left: 75px;
+    margin-right: 100px;
+    font-weight: normal;
+
+    /* background-color: #1e1f2f; */
+    /* border-radius: 20px; */
+    /* padding-top: 20px; */
+    /* padding-bottom: 20px; */
+    /* padding-left: 50px; */
+    /* padding-right: 50px; */
+}
+.pic-disc {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    background-color: #1e1f2f;
+    border-radius: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    align-items: center;
+    justify-items: center;
+}
+.img-cube-container {
+    display: flex;
+    width: 200px;
+    height: 200px;
+    background-color: #e4ebf2;
+    border-radius: 20px;
+    border: solid;
+    border-color:#9499e1;
+    border-width: 5px;
+    margin: 30px;
+    margin-left: 100px;
+    align-items: center;
+    justify-content: center;
+}
+.img-cube {
+    /* object-fit: cover; */
+    width: 80%;
 }
